Created EJS templates ie navbar, index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,14 @@
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
-  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="/scripts/app.js"></script>
-</head>
-
 <body>
-  <h1>Have fun! 🥔</h1>
+  <header>
+    <%- include('./partials/navbar'); %>
+
+  </header>
+  <div class="hero">
+    <h1>Have fun! 🥔</h1>
+  </div>
 </body>
 
 </html>
