--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+</head>
 
 <body>
   <header>
-    <%- include('./partials/navbar'); %>
+    <%- include('./partials/_navbar'); %>
 
   </header>
   <div class="hero">
