--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,52 @@
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="./assets/logo@1x.png" />
+    </a>
+    <% if (user) { %>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/products">Shop</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Singup</a>
+          </li>
+        </ul>
+      </div>
+      <% } else { %>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/products">Shop</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/products/user/<%= user_id %>">My listings</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/products/new">New listings</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/products/new">Logout</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Hello, <%= username %></a>
+            </li>
+          </ul>
+        </div>
+  </div>
+</nav>
+
+
+
+
+
+
+
+
 <header>
   <table>
     <tbody>
@@ -5,22 +54,22 @@
         <td class="logo">
           <img src="./assets/logo@1x.png" />
         </td>
-        <% if (user) { %>
+
+        <td class="navbar">
+        <td><a href="/shop">Shop</a></td>
+        <td><a href="/mylistings">My Listings</a></td>
+        <td><a href="/newlistings">New Listings</a></td>
+        <td><a href="/logout">Logout</a></td>
+        </td>
+        <% } else { %>
           <td class="navbar">
           <td><a href="/shop">Shop</a></td>
-          <td><a href="/mylistings">My Listings</a></td>
-          <td><a href="/newlistings">New Listings</a></td>
-          <td><a href="/logout">Logout</a></td>
+          <td><a href="/login">Login</a></td>
+          <td><a href="/signup">Signup</a></td>
           </td>
-          <% } else { %>
-            <td class="navbar">
-            <td><a href="/shop">Shop</a></td>
-            <td><a href="/login">Login</a></td>
-            <td><a href="/signup">Signup</a></td>
-            </td>
-            <% } %>
+          <% } %>
             <td>
-              <form class="serch-bar">
+              <form class="serch-bar" method="post" action="/urls">
                 <input id="serch-field" type="text" name="serch-field" placeholder="Search" />
               </form>
             </td>
