Created index, products, single_products, and other partial templates

--- a/views/new_listing.ejs
+++ b/views/new_listing.ejs
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <%- include('partials/_navbar') %>
+      <%- include('./partials/_header') %>
 
     </header>
       <main style="margin: 1em;">
