--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,17 +1,160 @@
+@import "variables";
+
+$primary-color: #0E1429;
+
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  width: 100vw;
+  background-color: #fff;
+}
+header {
+  max-width: 100vw;
+}
 
-  background: rgb(163, 208, 219);
-  background: linear-gradient(
-    227deg,
-    rgba(163, 208, 219, 1) 0%,
-    rgba(163, 176, 219, 1) 20%,
-    rgba(163, 173, 219, 1) 34%,
-    rgba(163, 219, 208, 1) 59%,
-    rgba(163, 208, 219, 1) 74%,
-    rgba(163, 208, 219, 1) 100%
-  );
+.featured-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 90vw;
+  margin-top: 10em;
+  .categories-title {
+    padding: .25em;
+    color: white;
+    background-color: $primary-color;
+    text-transform: uppercase;
+  }
+}
+#featured {
+  margin-top: 2.5em;
+}
+.product-row {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.product-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  max-width: 20vw;
+  margin: 0 1em;
+  background-color: rgb(239, 239, 240);
+  hr {
+    top: 0.313em;
+    border: none;
+    width: 100%;
+    height: 0.125em;
+    background: $primary-color;
+    margin-bottom: 0.313em;
+  }
+}
+.product-thumbnail img {
+  width: 20vw!important;
+  height: 20vw!important;
+  object-fit: cover;
+}
+.product-details {
+  padding: 2em;
+}
+.product-buttons button {
+  background-color: $primary-color;
+  color: #fff;
+  border: none;
+  margin: .15em .15em;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100vw;
+  min-height: 5em;
+  margin-top: 2em;
+  background-color: $primary-color;
+  color: #fff;
+}
+
+
+/* SINGLE PRODUCT PAGE STYLES*/
+.single-product {
+  width: 90vw;
+  padding: 5em;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.product-image-single img {
+  width: 40rem!important;
+  height: 40rem!important;
+  object-fit: cover;
+}
+.product-details-single {
+  width: 40rem;
+}
+.product-details-single {
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+}
+.product-title-single {
+  text-transform: uppercase;
+  color: $primary-color;
+}
+
+.product-desc-single {
+  margin-top: 2em;
+  font-size: 20px;
+}
+.product-owner-info {
+  margin-top: 2em;
+  padding: 1.5em;
+  width: 25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-start;
+  align-items: flex-start;
+  background-color: rgb(233, 229, 229);
+  border-radius: .5em;
+  border: 1px solid #ccc
+}
+.product-owner-info-title {
+  margin-bottom: 0;
+}
+.product-owner-info hr {
+  margin-top: 0;
+  border: none;
+  width: 100%;
+  height: 0.125em;
+  background: #0E1429;
+  margin-bottom: 0.5em;
+}
+.product-owner-info .fas {
+  margin-right: 1em;
+}
+
+.seller-name {
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+.phone_number {
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+.seller-email {
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+.seller-location {
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
 }
