--- a/views/products.ejs
+++ b/views/products.ejs
@@ -15,19 +15,6 @@
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <!-- End of CSS links -->
-  <!-- Links for carousel -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-    .carousel-inner img {
-  width: 100%;
-  height: 100%;
-  margin-top: -50vh;
-}
-  </style>
-  <!-- end of link for carousel -->
 
 </head>
 <!-- Start of body -->
@@ -35,30 +22,37 @@
 <body>
   <!-- Start of Header -->
   <header>
-    <%- include('./partials/navbar'); %>
-    <!-- Start of carousel -->
-    <div id="demo" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://images.pexels.com/photos/1229861/pexels-photo-1229861.jpeg" alt="Los Angeles" height="100vh"
-            object-fit="cover" ;>
+    <nav class="navbar fixed-top navbar-light bg-light">
+      <div class="container-fluid">
+        <div class="navbar-brand" id="navbarNav">
+          <a class="navbar-logo" href="/">
+            <!-- <img src="./assets/logo@1x.png" alt="TECHMARKET" /> -->
+            <h1 class="site-name">TECHMARKET</h1>
+          </a>
         </div>
-        <div class="carousel-item">
-          <img src="https://images.pexels.com/photos/2769274/pexels-photo-2769274.jpeg" alt="Chicago" height="100vh"
-            object-fit="cover" ;>
-        </div>
-        <div class="carousel-item">
-          <img src="https://images.pexels.com/photos/3945673/pexels-photo-3945673.jpeg" alt="New York" height="100vh"
-            object-fit="cover" ;>
+        <div class="navbar-items">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/products">Shop</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/register">Signup</a>
+            </li>
+          </ul>
+          <form class="d-flex" method="GET" action="/search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">></button>
+          </form>
         </div>
       </div>
-    </div>
-    <!-- End of carousel -->
+    </nav>
   </header>
-  <!-- <div class="go-down"><button >v</button></div> -->
   <div class="featured-section">
     <a href="/products/featured">
-      <h3 class="categories-title">Featured</h3>
+      <h3 class="categories-title">Products</h3>
     </a>
     <table id="featured">
       <tbody>
@@ -77,7 +71,8 @@
                 </h4>
                 <hr>
                 <span class="product-buttons">
-                  <a href="/products/product/<%= product.id %>"><button class="view-details">View product details</button></a>
+                  <a href="/products/product/<%= product.id %>"><button class="view-details">View product
+                      details</button></a>
                   <button class="add-to-wishlist">Add to wishlist</button>
                   <button class="contact seller">Contact seller</i></button>
                 </span>
