Update conversation template, created CSS and modified message routes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
 <body>
   <!-- Start of Header -->
   <header>
-    <%- include('./partials/navbar'); %>
+    <%- include('./partials/_navbar'); %>
     <!-- Start of carousel -->
     <div id="demo" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -90,7 +90,7 @@
   </div>
   <!-- Start of Footer -->
   <footer class="footer">
-    <%- include('./partials/footer'); %>
+    <%- include('./partials/_footer'); %>
   </footer>
   <!-- End of Footer -->
 </body>
