--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,7 +5,7 @@ $primary-color: #0E1429;
 body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   min-height: 100vh;
   width: 100vw;
@@ -14,6 +14,72 @@ body {
 header {
   max-width: 100vw;
 }
+/*** START OF NAVBAR CSS ******/
+
+.container-fluid {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
+  padding: 0 6em;
+  background-color: #ccc;
+}
+#navbarNav a {
+  text-decoration: none;
+}
+.site-name {
+  color: #0E1429;
+}
+.site-name:hover {
+  color: #0E1429;
+}
+.navbar-items {
+    width: 70vw;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.menu-logged-in {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.login-as {
+  margin-top: .5em;
+  font-weight: 700;
+}
+.navbar-nav {
+  width: 100em;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+.nav-menu {
+  display: flex;
+}
+.nav-item {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0 2em;
+  list-style-type: none;
+}
+.nav-link {
+  text-decoration: none;
+  color: rgb(46, 38, 38);
+}
+.nav-link:hover {
+  color: rgb(104, 104, 104);
+}
+.d-flex {
+  width: 20em;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+/**** FEATURED PRODUCTS CSS ****/
 
 .featured-section {
   display: flex;
@@ -21,51 +87,58 @@ header {
   justify-content: flex-start;
   align-items: flex-start;
   width: 90vw;
-  margin-top: 10em;
-  .categories-title {
-    padding: .25em;
-    color: white;
-    background-color: $primary-color;
-    text-transform: uppercase;
-  }
+  margin-top: 3em;
 }
+.featured-section .categories-title {
+  padding: 0.25em;
+  color: white;
+  background-color: #0E1429;
+  text-transform: uppercase;
+}
+
 #featured {
   margin-top: 2.5em;
 }
+
 .product-row {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
 }
+
 .product-block {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   max-width: 20vw;
   margin: 0 1em;
-  background-color: rgb(239, 239, 240);
-  hr {
-    top: 0.313em;
-    border: none;
-    width: 100%;
-    height: 0.125em;
-    background: $primary-color;
-    margin-bottom: 0.313em;
-  }
+  background-color: #efeff0;
 }
+.product-block hr {
+  top: 0.313em;
+  border: none;
+  width: 100%;
+  height: 0.125em;
+  background: #0E1429;
+  margin-bottom: 0.313em;
+}
+
 .product-thumbnail img {
-  width: 20vw!important;
-  height: 20vw!important;
+  width: 20vw !important;
+  height: 20vw !important;
   object-fit: cover;
 }
+
 .product-details {
   padding: 2em;
 }
+
 .product-buttons button {
-  background-color: $primary-color;
+  background-color: #0E1429;
   color: #fff;
   border: none;
-  margin: .15em .15em;
+  margin: 0.15em 0.15em;
 }
 
 .footer {
@@ -75,10 +148,9 @@ header {
   width: 100vw;
   min-height: 5em;
   margin-top: 2em;
-  background-color: $primary-color;
+  background-color: #0E1429;
   color: #fff;
 }
-
 
 /* SINGLE PRODUCT PAGE STYLES*/
 .single-product {
@@ -96,65 +168,162 @@ header {
 .product-details-single {
   width: 40rem;
 }
-.product-details-single {
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: flex-start;
-}
-.product-title-single {
-  text-transform: uppercase;
-  color: $primary-color;
-}
 
-.product-desc-single {
-  margin-top: 2em;
-  font-size: 20px;
-}
-.product-owner-info {
-  margin-top: 2em;
-  padding: 1.5em;
-  width: 25rem;
+.product-details-single {
   display: flex;
   flex-direction: column;
-  justify-content:flex-start;
+  justify-content: flex-start;
   align-items: flex-start;
-  background-color: rgb(233, 229, 229);
-  border-radius: .5em;
-  border: 1px solid #ccc
-}
-.product-owner-info-title {
-  margin-bottom: 0;
-}
-.product-owner-info hr {
-  margin-top: 0;
-  border: none;
-  width: 100%;
-  height: 0.125em;
-  background: #0E1429;
-  margin-bottom: 0.5em;
-}
-.product-owner-info .fas {
-  margin-right: 1em;
-}
+  }
 
-.seller-name {
-  display: flex;
-  justify-content: flex-start;
-  align-items: baseline;
-}
-.phone_number {
-  display: flex;
-  justify-content: flex-start;
-  align-items: baseline;
-}
-.seller-email {
-  display: flex;
-  justify-content: flex-start;
-  align-items: baseline;
-}
-.seller-location {
-  display: flex;
-  justify-content: flex-start;
-  align-items: baseline;
-}
+  .product-title-single {
+    text-transform: uppercase;
+    color: #0E1429;
+  }
+  .product-desc-single {
+    margin-top: 2em;
+    font-size: 20px;
+  }
+  .product-owner-info {
+    margin-top: 2em;
+    padding: 1.5em;
+    width: 25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    align-items: flex-start;
+    background-color: rgb(233, 229, 229);
+    border-radius: .5em;
+    border: 1px solid #ccc
+  }
+  .product-owner-info-title {
+    margin-bottom: 0;
+  }
+  .product-owner-info hr {
+    margin-top: 0;
+    border: none;
+    width: 100%;
+    height: 0.125em;
+    background: #0E1429;
+    margin-bottom: 0.5em;
+  }
+  .product-owner-info .fas {
+    margin-right: 1em;
+  }
+
+  .seller-name {
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+  }
+  .phone_number {
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+  }
+  .seller-email {
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+  }
+  .seller-location {
+    display: flex;
+    justify-content: flex-start;
+    align-items: baseline;
+  }
+
+    /*** START OF CONVERSATIONS ****/
+
+    .container {
+      width: 60vw;
+      margin-top: 3em;
+      padding: 1em;
+      background-color: rgb(226, 226, 226);
+      border-radius: .5em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .message-body {
+      width: 80%;
+    }
+    #message-form {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
+    .message-type {
+      width: 100%;
+      margin-top: 2em;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-end;
+    }
+    .message-type textarea {
+      width: 100%;
+      min-height: 5em;
+      padding: .25em;
+      font-weight: 400;
+      font-family: sans-serif;
+      font-size: 16px;
+      margin-bottom: .5em;
+      border-radius: .5em;
+      border: none;
+    }
+    .message-type button {
+      background-color: #0E1429;
+      border: none;
+      color: white;
+      cursor: pointer;
+      padding: .25em 1em;
+    }
+    .image-conversation {
+      background-color: rgb(240, 240, 240);
+      /* margin-top: 1em; */
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      height: 400px;
+      overflow: auto;
+      overscroll-behavior-y: contain;
+      padding: 0 1em;
+    }
+    .product-image {
+      margin-top: 1em;
+      width: 200px;
+      height: 200px;
+      border-radius: .5em;
+    }
+    .product-image img {
+      width: 200px!important;
+      height: 200px!important;
+      object-fit: cover;
+      border-radius: .5em;
+    }
+    #messages-container {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+  #messages-container li {
+    margin-top: 1em;
+    list-style-type: none;
+    background-color: rgb(84, 179, 243);
+    padding: .5em;
+    border-radius: 1em;
+    width: 70%;
+    /* box-shadow: ; */
+  }
+
+  #messages-container p {
+    margin-bottom: 1em;
+    font-size: 10px;
+    font-weight: 400;
+    color: rgb(156, 156, 156);
+  }
