Multiple changes during mutual discussion

--- a/views/single_product.ejs
+++ b/views/single_product.ejs
@@ -80,7 +80,7 @@
   </div>
   <!-- Start of Footer -->
   <footer class="footer">
-    <%- include('./partials/footer'); %>
+    <%- include('./partials/_footer'); %>
   </footer>
   <!-- End of Footer -->
 </body>
