--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,17 +16,22 @@
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <!-- End of CSS links -->
   <!-- Links for carousel -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"> -->
+
+
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="/scripts/app.js"></script>
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script> -->
+  <!-- <style>
     .carousel-inner img {
   width: 100%;
   height: 100%;
   margin-top: -50vh;
 }
-  </style>
+  </style> -->
   <!-- end of link for carousel -->
 
 </head>
@@ -35,9 +40,9 @@
 <body>
   <!-- Start of Header -->
   <header>
-    <%- include('./partials/_navbar'); %>
+    <!-- <%- include('./partials/_navbar'); %> -->
     <!-- Start of carousel -->
-    <div id="demo" class="carousel slide" data-ride="carousel">
+    <!-- <div id="demo" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="https://images.pexels.com/photos/1229861/pexels-photo-1229861.jpeg" alt="Los Angeles" height="100vh"
@@ -52,16 +57,17 @@
             object-fit="cover" ;>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End of carousel -->
   </header>
   <!-- <div class="go-down"><button >v</button></div> -->
+  <button id="click">Bring users</button>
   <div class="featured-section">
     <a href="/products/featured">
       <h3 class="categories-title">Featured</h3>
     </a>
     <table id="featured">
-      <tbody>
+      <!-- <tbody>
         <tr class="product-row">
           <% for (let product of products) { %>
             <td class="product-block">
@@ -85,7 +91,7 @@
             </td>
             <% } %>
         </tr>
-      </tbody>
+      </tbody> -->
     </table>
   </div>
   <!-- Start of Footer -->
