Modified routes to work with templates and fixed SCSS

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,3 +1,5 @@
+$white:                              #fff;
+$black:                              #000;
 $carousel-control-color:             $white;
 $carousel-control-width:             15%;
 $carousel-control-opacity:           .5;
