--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-light bg-light">
+<nav class="navbar fixed-top custom">
   <div class="container-fluid">
     <div class="navbar-brand" id="navbarNav">
       <a class="navbar-logo" href="/">
@@ -18,7 +18,7 @@
               <a class="nav-link" href="/user/<%= user_id %>">My listings</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/new">New listing</a>
+              <a class="nav-link" href="/products/new">New listing</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/wishlist/<%= user_id %>">My wishlist</a>
