--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,40 +15,52 @@ header {
   max-width: 100vw;
 }
 /*** START OF NAVBAR CSS ******/
+.custom {
+  background-color: #0E1429;
+}
 
 .container-fluid {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: nowrap !important;
   width: 100vw;
   padding: 0 6em;
-  background-color: #ccc;
+  background-color: #0E1429;
 }
+
 #navbarNav a {
   text-decoration: none;
 }
+
 .site-name {
-  color: #0E1429;
+  color: #ffffff;
 }
+
 .site-name:hover {
-  color: #0E1429;
+  color: #c3c9e0;
 }
+
 .navbar-items {
-    width: 70vw;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  width: 70vw;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
+
 .menu-logged-in {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
 }
+
 .login-as {
-  margin-top: .5em;
+  margin-top: 0.5em;
   font-weight: 700;
+  color: #fff;
 }
+
 .navbar-nav {
   width: 100em;
   display: flex;
@@ -56,22 +68,27 @@ header {
   justify-content: flex-end;
   align-items: center;
 }
+
 .nav-menu {
   display: flex;
 }
+
 .nav-item {
   font-size: 18px;
   font-weight: 700;
   margin: 0 2em;
   list-style-type: none;
 }
+
 .nav-link {
   text-decoration: none;
-  color: rgb(46, 38, 38);
+  color: #fff;
 }
+
 .nav-link:hover {
-  color: rgb(104, 104, 104);
+  color: #a3a0a0;
 }
+
 .d-flex {
   width: 20em;
   display: flex;
@@ -87,11 +104,11 @@ header {
   justify-content: flex-start;
   align-items: flex-start;
   width: 90vw;
-  margin-top: 3em;
+  margin-top: 10em;
 }
 .featured-section .categories-title {
   padding: 0.25em;
-  color: white;
+  color: #fff;
   background-color: #0E1429;
   text-transform: uppercase;
 }
@@ -112,7 +129,7 @@ header {
   flex-direction: column;
   justify-content: flex-start;
   max-width: 20vw;
-  margin: 0 1em;
+  margin: 1em 1em;
   background-color: #efeff0;
 }
 .product-block hr {
@@ -129,9 +146,11 @@ header {
   height: 20vw !important;
   object-fit: cover;
 }
-
+.product-title {
+  text-transform: uppercase;
+}
 .product-details {
-  padding: 2em;
+  padding: 1em;
 }
 
 .product-buttons button {
@@ -155,7 +174,7 @@ header {
 /* SINGLE PRODUCT PAGE STYLES*/
 .single-product {
   width: 90vw;
-  padding: 5em;
+  margin-top: 10em;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -276,7 +295,7 @@ header {
     .message-type button {
       background-color: #0E1429;
       border: none;
-      color: white;
+      color: #fff;
       cursor: pointer;
       padding: .25em 1em;
     }
