--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,14 +9,12 @@
 
   <!-- CSS links  -->
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <!-- End of CSS links -->
   <!-- Links for carousel -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -79,7 +77,7 @@
                 <span class="product-buttons">
                   <a href="/products/product/<%= product.id %>"><button class="view-details">View product details</button></a>
                   <button class="add-to-wishlist">Add to wishlist</button>
-                  <button class="contact seller">Contact seller</i></button>
+                  <a href="/messages/<%= user_id %>/<%= product.id %>"><button class="contact seller">Contact seller</button></a>
                 </span>
               </span>
             </td>
