--- a/views/products.ejs
+++ b/views/products.ejs
@@ -22,33 +22,7 @@
 <body>
   <!-- Start of Header -->
   <header>
-    <nav class="navbar fixed-top navbar-light bg-light">
-      <div class="container-fluid">
-        <div class="navbar-brand" id="navbarNav">
-          <a class="navbar-logo" href="/">
-            <!-- <img src="./assets/logo@1x.png" alt="TECHMARKET" /> -->
-            <h1 class="site-name">TECHMARKET</h1>
-          </a>
-        </div>
-        <div class="navbar-items">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/products">Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/register">Signup</a>
-            </li>
-          </ul>
-          <form class="d-flex" method="GET" action="/search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">></button>
-          </form>
-        </div>
-      </div>
-    </nav>
+    <%- include('./partials/_navbar'); %>
   </header>
   <div class="featured-section">
     <a href="/products/featured">
@@ -64,7 +38,7 @@
               </span>
               <span class="product-details">
                 <h3 class="product-title">
-                  <%= product.title %>
+                  <%= product.title.slice(0, 16) %>
                 </h3>
                 <hr>
                 <h4 class="product-price">Price: $<%= ((product.price) / 100).toFixed(2) %>
@@ -74,7 +48,7 @@
                   <a href="/products/product/<%= product.id %>"><button class="view-details">View product
                       details</button></a>
                   <button class="add-to-wishlist">Add to wishlist</button>
-                  <button class="contact seller">Contact seller</i></button>
+                  <button class="contact seller">Contact seller</button>
                 </span>
               </span>
             </td>
@@ -85,7 +59,7 @@
   </div>
   <!-- Start of Footer -->
   <footer class="footer">
-    <%- include('./partials/footer'); %>
+    <%- include('./partials/_footer'); %>
   </footer>
   <!-- End of Footer -->
 </body>
