--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -24,7 +24,7 @@
               <a id="wishlist" class="nav-link" href="/wishlist/<%= user_id %>">My wishlist</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
+              <a id="logout" class="nav-link" href="/logout">Logout</a>
             </li>
           </ul>
           <form class="d-flex" method="GET" action="/search">
@@ -39,10 +39,19 @@
             <a class="nav-link" aria-current="page" href="/products">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
+            <!-- <a class="nav-link" href="/login">Login</a> -->
+            <form id="login-form" class="form-inline" action="/login" method="POST">
+              <div class="form-group mb-2">
+                <label for="email">Enter e-mail:</label>
+                <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
+                <label for="password">Enter password:</label>
+                <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+                <button type="submit" class="btn btn-primary">Login</button>
+              </div>
+            </form>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/register">Signup</a>
+            <a class="nav-link" href="/users/new">Signup</a>
           </li>
         </ul>
         <form class="d-flex" method="GET" action="/search">
