Changed new_listing template

--- a/views/new_listing.ejs
+++ b/views/new_listing.ejs
@@ -29,7 +29,7 @@
           </tr>
           <tr class="input-field">
             <td><label for="category">Category *:</label></td>
-            <td><select name="product-category" id="product-category">
+            <td><select type="text" name="category" id="product-category">
               <option value="" disabled selected hidden>Choose a category</option>
               <option value="cellphones">Cellphones</option>
               <option value="laptops">Laptops</option>
@@ -56,8 +56,8 @@
           <tr class="input-field">
             <td><label for="featured">Featured:</label></td>
             <td><select name="featured" id="featured-boolean">
-              <option value="no">No</option>
-              <option value="yes">Yes</option>
+              <option value="false">false</option>
+              <option value="true">true</option>
             </select></td>
           </tr>
           <tr class="single-row-item">
