--- a/views/products.ejs
+++ b/views/products.ejs
@@ -23,7 +23,7 @@
   <!-- Start of Header -->
   <header>
 
-    <%- include('./partials/_navbar'); %>
+    <!-- removed link for navbar -->
 
   </header>
   <form method="post" action="/products">
@@ -55,7 +55,10 @@
                 <span class="product-buttons">
                   <a href="/products/product/<%= product.id %>"><button class="view-details">View product
                       details</button></a>
-                  <button class="add-to-wishlist">Add to wishlist</button>
+                  <form method="post" action="products/whishlist/<%= product.id %>/add">
+                    <button class="add-to-wishlist">Add to wishlist</button>
+                  </form>
+
                   <button class="contact seller">Contact seller</button>
                 </span>
               </span>
@@ -67,7 +70,7 @@
   </div>
   <!-- Start of Footer -->
   <footer class="footer">
-    <%- include('./partials/_footer'); %>
+    <!-- <%- include('./partials/_footer'); %> -->
   </footer>
   <!-- End of Footer -->
 </body>
