--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -21,7 +21,7 @@
               <a class="nav-link" href="/products/new">New listing</a>
             </li>
             <li class="nav-item">
-              <a id="wishlist" class="nav-link" href="/wishlist/<%= user_id %>">My wishlist</a>
+              <a id="wishlist" class="nav-link" href="/products/wishlist/<%= user_id %>">My wishlist</a>
             </li>
             <li class="nav-item">
               <a id="logout" class="nav-link" href="/logout">Logout</a>
