--- a/views/products.ejs
+++ b/views/products.ejs
@@ -16,9 +16,7 @@
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <!-- End of CSS links -->
 
-  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="/scripts/app.js"></script>
-  <script type="text/javascript" src="/scripts/users.js"></script>
+
 
 </head>
 <!-- Start of body -->
@@ -46,7 +44,7 @@
       <tbody>
         <tr class="product-row">
           <% for (let product of products) { %>
-            <td class="product-block">
+            <td class="product-block" >
               <span class="product-thumbnail">
                 <img src="<%= product.img_url %>" alt="<%= product.title %>" style="width: 200px; height: 200px" />
               </span>
@@ -58,10 +56,10 @@
                 <h4 class="product-price">Price: $<%= ((product.price) / 100).toFixed(2) %>
                 </h4>
                 <hr>
-                <span class="product-buttons">
+                <span class="product-buttons" id="pdt_<%=product.id%>">
                   <a href="/products/product/<%= product.id %>"><button class="view-details">View product
                       details</button></a>
-                  <form method="post" action="products/whishlist/<%= product.id %>/add">
+                  <form class="add-wishlist-form" method="post" action="products/wishlist/<%= product.id %>/add">
                     <button class="add-to-wishlist">Add to wishlist</button>
                   </form>
 
@@ -79,6 +77,9 @@
     <!-- <%- include('./partials/_footer'); %> -->
   </footer>
   <!-- End of Footer -->
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="/scripts/app.js"></script>
+  <script type="text/javascript" src="/scripts/users.js"></script>
 </body>
 <!-- End of body -->
 
