--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -8,7 +8,8 @@
     </div>
     <% if (user_id) { %>
       <section class="menu-logged-in">
-        <div class="login-as">Logged in as <%= userName %></div>
+        <div class="login-as">Logged in as <%= userName %>
+        </div>
         <div class="navbar-items">
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -27,34 +28,34 @@
               <a id="logout" class="nav-link" href="/logout">Logout</a>
             </li>
           </ul>
-          <form class="d-flex" method="GET" action="/search">
+          <!-- <form class="d-flex" method="GET" action="/search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button type="submit">></button>
-          </form>
+          </form> -->
         </div>
       </section>
       <% } else { %>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/products">Shop</a>
-          </li>
-          <li class="nav-item">
-            <!-- <a class="nav-link" href="/login">Login</a> -->
+        <section class="logged-out-nav">
+          <div class="login-div">
             <form id="login-form" class="form-inline" action="/login" method="POST">
               <div class="form-group mb-2">
-                <label for="email">Enter e-mail:</label>
-                <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
-                <label for="password">Enter password:</label>
-                <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
-                <button type="submit" class="btn btn-primary">Login</button>
+                <input class="form-control" type="email" name="email" placeholder="Email">
+                <input class="form-control" type="password" name="password" placeholder="Password">
+                <button type="submit">Login</button>
               </div>
             </form>
-          </li>
-          <br>
-          <li class="nav-item">
-            <a class="nav-link" href="/users/new">Signup</a>
-          </li>
-        </ul>
+          </div>
+          <div class="other-menus">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/products">Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/new">Signup</a>
+              </li>
+            </ul>
+          </div>
+        </section>
         <!-- <form class="d-flex" method="GET" action="/search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">></button>
