--- a/views/products.ejs
+++ b/views/products.ejs
@@ -59,12 +59,12 @@
                 </h4>
                 <hr>
                 <span class="product-buttons">
-                  <a href="/products/product/<%= product.id %>"><button class="view-details">View product
-                      details</button></a>
+                  <a href="/products/product/<%= product.id %>">
+                    <button class="view-details">View product details</button>
+                  </a>
                   <form method="post" action="products/whishlist/<%= product.id %>/add">
                     <button class="add-to-wishlist">Add to wishlist</button>
                   </form>
-
                   <button class="contact seller">Contact seller</button>
                 </span>
               </span>
