--- a/views/single_product.ejs
+++ b/views/single_product.ejs
@@ -69,6 +69,9 @@
     <%- include('./partials/_footer'); %>
   </footer>
   <!-- End of Footer -->
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="/scripts/app.js"></script>
+  <script type="text/javascript" src="/scripts/users.js"></script>
 </body>
 <!-- End of body -->
 </html>
