Commit before pulling from remote conflictinng version

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 
 <body>
   <!-- Start of Header -->
-  <header>
+  <header id="page-header">
     <%- include('./partials/_navbar'); %>
   </header>
 
