--- a/views/products.ejs
+++ b/views/products.ejs
@@ -23,7 +23,7 @@
 
 <body>
   <!-- Start of Header -->
-  <header>
+  <header id="page-header">
 
     <%- include('./partials/_navbar') %>
       <div class="tagline"><text>BUY, SELL, WIN.</text></div>
