Edit page template add username

--- a/views/edit_product.ejs
+++ b/views/edit_product.ejs
@@ -18,7 +18,7 @@
     </header>
     <main class="container-create-new">
       <div class="new-listing-title">
-        <h3>Edit a listing</h3>
+        <h3>Edit a listing by <%= userName %></h3>
       </div>
       <table class="new-product-form">
         <tbody>
