--- a/views/products.ejs
+++ b/views/products.ejs
@@ -38,7 +38,7 @@
   </div>
   <div class="featured-section">
     <a href="/products">
-      <h3 class="categories-title">Featured products</h3>
+      <h3 class="categories-title">All Listings</h3>
     </a>
     <table id="featured">
       <tbody>
