wishlist, add/remove from wishlist, sold item css toggle changed wishlist table name

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -16,7 +16,7 @@
               <a class="nav-link" aria-current="page" href="/products">Shop</a>
             </li>
             <li class="nav-item">
-              <a id="myListings" class="nav-link" href="/users/user/<%= user_id %>">My listings</a>
+              <a id="myListings" class="nav-link" href="/products/users/<%= user_id %>">My listings</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/products/new">New listing</a>
