--- a/views/products.ejs
+++ b/views/products.ejs
@@ -56,16 +56,30 @@
                 <h4 class="product-price">Price: $<%= ((product.price) / 100).toFixed(2) %>
                 </h4>
                 <hr>
+                <% if (product.sold === true) { %>
+                  <div class="sold-div">
+                    <p class="sold-text">SOLD!</p>
+                  </div>
+                <% } else {%>
                 <span class="product-buttons" id="pdt_<%=product.id%>">
                   <a href="/products/product/<%= product.id %>"><button class="view-details">View product
                       details</button></a>
-                  <form class="add-wishlist-form" method="post" action="products/wishlist/<%= product.id %>/add">
+                  <% if (product.wishlist === true) { %>
+                    <form class="remove-wishlist-form" method="POST" action="/products/wishlist/<%= product.id %>/delete">
+                      <button class="remove-from-wishlist">Remove from wishlist</button>
+                    </form>
+                  <% } else if (product.owner_id === user_id) { %>
+                      <!-- placeholder element? -->
+                  <% } else { %>
+                  <form class="add-wishlist-form">
                     <button class="add-to-wishlist">Add to wishlist</button>
                   </form>
+                  <% } %>
                 </span>
+                <% } %>
               </span>
             </td>
-            <% } %>
+          <% } %>
         </tr>
       </tbody>
     </table>
