Fixed messaging problem

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -327,6 +327,9 @@ button {
   justify-content: flex-start;
   align-items: baseline;
 }
+.placeholder-div {
+  height: 2em;
+}
 
 /*** START OF CONVERSATIONS ****/
 
