--- a/views/products.ejs
+++ b/views/products.ejs
@@ -69,7 +69,7 @@
                       <button class="remove-from-wishlist">Remove from wishlist</button>
                     </form>
                   <% } else if (product.owner_id === user_id) { %>
-                      <!-- placeholder element? -->
+                      <div class="placeholder-div"></div>
                   <% } else { %>
                   <form class="add-wishlist-form">
                     <button class="add-to-wishlist">Add to wishlist</button>
