--- a/views/single_product.ejs
+++ b/views/single_product.ejs
@@ -45,27 +45,26 @@
         </h3>
 
         <span class="product-buttons" id="adm-pdt_<%=product.id%>">
-          
-          
+
+
           <% if (userName === "admin") { %>
           <button class="add-to-wishlist">Add to wishlist</button>
           <button id="message-seller" class="contact seller">Contact seller</button>
             <form class="edit-product-form" method="get" action="/products/product/<%= product.product_id %>/edit">
               <button class="edit-button" id="vl-edit">Edit</button>
             </form>
-
             <form class="delete-product-form" method="post" action="/products/product/<%= product.product_id %>/delete">
               <button class="delete-button" id="vl-delete">Delete</button>
             </form>
           <% } else if(user_id !== product.owner_id) { %>
-      
+
           <button class="add-to-wishlist">Add to wishlist</button>
-          <a href="/messages/<%=user_id %>/<%=product.owner_id %>/<%=product.product_id %>"><button id="message-seller" class="contact seller">Contact seller</button></a>
+          <a href="/messages/<%=user_id %>/<%=product.owner_id %>/<%=product.single_product_id %>"><button id="message-seller" class="contact seller">Contact seller</button></a>
 
         </span>
         <% } else { %>
           <span class="see-messages">
-            <a href="/messages/<%=product.owner_id %>/<%= product.sender_id %>/<%= product.product_id %>"><button id="see-all-messages" class="link-to-messages">Messages</button></a>
+            <a href="/messages/<%=product.owner_id %>/<%= product.sender_id %>/<%= product.single_product_id %>"><button id="see-all-messages" class="link-to-messages">Messages</button></a>
           </span>
         <% } %>
       </span>
@@ -101,12 +100,6 @@
         </span>
       </div>
     </div>
-  </div>
-  <div class="message-box">
-    <main id="message-container" class="container">
-      <!-- MESAGE LIST GOES HERE -->
-
-    </main>
   </div>
   <!-- Start of Footer -->
   <footer class="footer">
