--- a/views/partials/_featured.ejs
+++ b/views/partials/_featured.ejs
@@ -19,13 +19,33 @@
               <h4 class="product-price">Price: $<%= ((product.price) / 100).toFixed(2) %>
               </h4>
               <hr>
-              <span class="product-buttons" id="pdt_<%=product.id%>">
+              <!-- <span class="product-buttons" id="pdt_<%=product.id%>">
                 <a href="/products/product/<%= product.id %>"><button class="view-details">View product
                     details</button></a>
                 <form class="add-wishlist-form" method="post" action="products/wishlist/<%= product.id %>/add">
                   <button class="add-to-wishlist">Add to wishlist</button>
-                </form>
-              </span>
+                </form> -->
+
+
+                <span class="product-buttons" id="prd_<%=product.id%>">
+                  <a href="/products/product/<%= product.id %>"><button class="view-details">View product
+                      details</button></a>
+                  <% if (product.wishlist === true) { %>
+                    <form class="remove-wishlist-form">
+                      <button class="remove-from-wishlist">Remove from wishlist</button>
+                    </form>
+                  <% } else if (product.owner_id === user_id) { %>
+                      <div class="placeholder-div"></div>
+                  <% } else { %>
+                  <form class="add-wishlist-form">
+                    <button class="add-to-wishlist">Add to wishlist</button>
+                  </form>
+                  <% } %>
+                </span>
+
+
+
+              <!-- </span> -->
             </span>
           </td>
           <% } %>
